# har-risk-codex-package

har-risk-codex-package/har-risk-codex-package/: README.md  agents.md  pyproject.toml
har-risk-codex-package/har-risk-codex-package/config/: patterns.yaml  rules.yaml  vendors.yaml
har-risk-codex-package/har-risk-codex-package/docs/: evidence_schema.md  methodology.md  rule_authoring.md
har-risk-codex-package/har-risk-codex-package/src/har_engine/: __init__.py  cli.py  models.py  parser.py
har-risk-codex-package/har-risk-codex-package/src/har_engine/classifiers/: context.py  pii.py  vendors.py
har-risk-codex-package/har-risk-codex-package/src/har_engine/reports/: json_report.py  markdown_report.py
har-risk-codex-package/har-risk-codex-package/src/har_engine/rules/: engine.py  registry.py
har-risk-codex-package/har-risk-codex-package/tests/: test_detection.py  test_parser.py
